# subxt-client

./: Cargo.toml  bsx_metadata.scale  metadata.json
src/: main.rs
